--- a/tutorials/deliveroo-clone-nuxt-strapi-tutorial/deliveroo-clone-nuxt-strapi.yml
+++ b/tutorials/deliveroo-clone-nuxt-strapi-tutorial/deliveroo-clone-nuxt-strapi.yml
@@ -4,10 +4,12 @@
     - text
   language: en
   date: 2019-08-19
-  length: ''
   authors:
     - Pierre Burgy
     - Maxime Castres
+  github_authors:
+    - pierreburgy
+    - mcastres
   source: 'https://blog.strapi.io/'
   topics:
     - nuxt.js
@@ -16,4 +18,4 @@
     - apollo
     - uikit
     - stripe
-  versions: beta
+  version: beta
