--- a/tutorials/gatsby-strapi-tutorial/gatsby-strapi-tutorial.yml
+++ b/tutorials/gatsby-strapi-tutorial/gatsby-strapi-tutorial.yml
@@ -9,6 +9,7 @@
   github_authors:
     - davidkartuzinski
   source: 'https://blog.strapi.io/'
+  image_url: 'https://blog.strapi.io/content/images/2018/11/gatsby-strapi.png'
   topics:
     - gatsby
     - strapi
