--- a/tutorials/strapi-on-ubuntu-google-cloud.yml
+++ b/tutorials/strapi-on-ubuntu-google-cloud.yml
@@ -5,9 +5,9 @@
   language: en
   date: 2019-08-20
   authors:
-    - 
+    - Pappin Vijak
   github_authors:
-    -
+    - pappinvijak
   source: 'https://www.cloudbooklet.com'
   image_url: 'https://storage.googleapis.com/cloudbooklet-new/wp-content/uploads/2019/01/03054237/ad5bafec-install-strapi-on-ubuntu-18.04-lts-on-google-cloud-with-cloud-sql-1024x576.jpg'
   topics:
