--- a/tutorials/strapi-on-heroku.yml
+++ b/tutorials/strapi-on-heroku.yml
@@ -9,7 +9,7 @@
   github_authors:
     - pierreburgy
   source: 'https://www.strapi.io.com'
-  image_url: 'https://blog.strapi.io/content/images/2018/02/strapi-heroku-small.png'
+  image_url: ''
   topics:
     - strapi
     - heroku
