[UPDATE] text to article

--- a/tutorials/build-online-store-react-graphql.yml
+++ b/tutorials/build-online-store-react-graphql.yml
@@ -1,7 +1,7 @@
 - title: Build an Online Store with React and GraphQL in 90 Minutes
   link : https://www.udemy.com/course/build-an-online-store-with-react-and-graphql-in-90-minutes/?LSNPUBID=iyqA03cu2sQ&ranEAID=iyqA03cu2sQ&ranMID=39197&ranSiteID=iyqA03cu2sQ-W0BvDDe1YnAYlA2vpUKirg
   formats:
-    - text
+    - article
     - video
   language: en
   date: 2019-10-01
