--- a/tutorials/create-blog-strapi-react.yml
+++ b/tutorials/create-blog-strapi-react.yml
@@ -1,7 +1,7 @@
 - title: Create a Blog with React and Strapi
   link : https://medium.com/@adeyinkakazeemolufemioluoje/create-a-blog-with-react-and-strapi-cc3d8f0f01e1
   formats:
-    - text
+    - article
   language: en
   date: 2018-09-05
   authors:
