--- a/tutorials/deliveroo-clone-next-strapi-tutorial/deliveroo-clone-next-strapi.yml
+++ b/tutorials/deliveroo-clone-next-strapi-tutorial/deliveroo-clone-next-strapi.yml
@@ -1,7 +1,7 @@
 - title: Cooking a Deliveroo clone with Next and Strapi
   link: https://strapi.io/blog/strapi-next-setup/
   formats:
-    - text
+    - article
   language: en
   date: 2019-11-12
   authors:
