--- a/tutorials/deploy-nodejs-app-nesabox.yml
+++ b/tutorials/deploy-nodejs-app-nesabox.yml
@@ -1,7 +1,7 @@
 - title: How to deploy and manage Node.js apps with Nesabox
   link : https://katifrantz.com/how-to-deploy-and-manage-node-js-apps-with-nesabox/
   formats:
-    - text
+    - article
   language: en
   date: 2019-09-27
   authors:
