--- a/tutorials/gatsby-strapi-tutorial/gatsby-strapi-tutorial.yml
+++ b/tutorials/gatsby-strapi-tutorial/gatsby-strapi-tutorial.yml
@@ -1,7 +1,7 @@
 - title: Building a Static Blog using Gatsby and Strapi
   link: https://blog.strapi.io/building-a-static-website-using-gatsby-and-strapi/
   formats:
-    - text
+    - article
   language: en
   date: 2018-01-18
   authors:
