--- a/tutorials/strapi-mlab-heroku-s3.yml
+++ b/tutorials/strapi-mlab-heroku-s3.yml
@@ -1,7 +1,7 @@
 - title: STRAPI ⚡️ ️MLab ⚡️ ️Heroku ⚡️ S3 - Deployment for a non-developer
   link : https://medium.com/@tamirp/strapi-️mlab-️heroku-️-s3-step-by-step-deployment-for-a-non-developer-1cae3ec3dfe0
   formats:
-    - text
+    - article
   language: en
   date: 2019-08-20
   authors:
