--- a/tutorials/strapi-on-heroku.yml
+++ b/tutorials/strapi-on-heroku.yml
@@ -1,7 +1,7 @@
 - title: Deploying a Strapi API on Heroku
   link : https://strapi.io/blog/deploying-a-strapi-api-on-heroku
   formats:
-    - text
+    - article
   language: en
   date: 2018-02-08
   authors:
