--- a/tutorials/strapi-on-ubuntu-google-cloud.yml
+++ b/tutorials/strapi-on-ubuntu-google-cloud.yml
@@ -1,7 +1,7 @@
 - title: Install Strapi on Ubuntu 18.04 LTS on Google Cloud with Cloud SQL
   link : https://www.cloudbooklet.com/install-strapi-on-ubuntu-18-04-lts-on-google-cloud-with-cloud-sql/
   formats:
-    - text
+    - article
   language: en
   date: 2019-08-20
   authors:
