--- a/tutorials/using-mlab-with-strapi.yml
+++ b/tutorials/using-mlab-with-strapi.yml
@@ -1,7 +1,7 @@
 - title: Using mLab with Strapi
   link : https://strapi.io/blog/using-mlab-with-strapi?redirectPage=4
   formats:
-    - text
+    - article
   language: en
   date: 2018-02-06
   authors:
