--- a/tutorials/deliveroo-clone-nuxt-strapi-tutorial/deliveroo-clone-nuxt-strapi.yml
+++ b/tutorials/deliveroo-clone-nuxt-strapi-tutorial/deliveroo-clone-nuxt-strapi.yml
@@ -1,7 +1,7 @@
 - title: Cooking a Deliveroo clone with Nuxt and Strapi
   link: https://blog.strapi.io/cooking-a-deliveroo-clone-with-nuxt-vue-js-graphql-strapi-and-stripe-setup-part-1-7/
   formats:
-    - text
+    - article
   language: en
   date: 2019-08-19
   authors:
