--- a/tutorials/strapi-with-react-spa.yml
+++ b/tutorials/strapi-with-react-spa.yml
@@ -1,7 +1,7 @@
 - title: Using Strapi for Node.js Content Management with a React SPA
   link : https://snipcart.com/blog/node-js-react-strapi-tutorial
   formats:
-    - text
+    - article
   language: en
   date: 2018-08-09
   authors:
