--- a/tutorials/strapi-mlab-heroku-s3.yml
+++ b/tutorials/strapi-mlab-heroku-s3.yml
@@ -9,7 +9,7 @@
   github_authors:
     - tamirandtom
   source: 'https://medium.com/'
-  image_url: 'https://miro.medium.com/max/1800/1*H781A2_Em3S7XXHBZUXRqw.png'
+  image_url:
   topics:
     - strapi
     - mlab
