Update blog link

--- a/tutorials/nuxt-strapi-apollo-blog/nuxt-strapi-apollo-blog.yml
+++ b/tutorials/nuxt-strapi-apollo-blog/nuxt-strapi-apollo-blog.yml
@@ -1,5 +1,5 @@
 - title: Building a Blog using Nuxt, Strapi and Apollo
-  link: https://blog.strapi.io/building-a-static-website-using-gatsby-and-strapi/
+  link: https://strapi.io/blog/build-a-blog-using-nuxt-strapi-and-apollo/
   formats:
     - article
   language: en
