--- a/tutorials/nuxt-strapi-apollo-blog/nuxt-strapi-apollo-blog.yml
+++ b/tutorials/nuxt-strapi-apollo-blog/nuxt-strapi-apollo-blog.yml
@@ -9,7 +9,7 @@
   github_authors:
     - mcastres
   source: 'https://blog.strapi.io/'
-  image_url:
+  image_url: 'https://blog.strapi.io/content/images/2019/11/Nuxt-blog.png'
   topics:
     - nuxt.js
     - apollo
