--- a/tutorials/import-content-plugin-tutorial/package.json
+++ b/tutorials/import-content-plugin-tutorial/package.json
@@ -27,6 +27,7 @@
     "strapi-plugin-content-manager": "3.0.0-beta.18.3",
     "strapi-plugin-content-type-builder": "3.0.0-beta.18.3",
     "strapi-plugin-email": "3.0.0-beta.18.3",
+    "strapi-plugin-graphql": "3.0.0-beta.18.3",
     "strapi-plugin-upload": "3.0.0-beta.18.3",
     "strapi-plugin-users-permissions": "3.0.0-beta.18.3",
     "strapi-utils": "3.0.0-beta.18.3",
