--- a/tutorials/import-content-plugin-tutorial/plugins/import-content/package.json
+++ b/tutorials/import-content-plugin-tutorial/plugins/import-content/package.json
@@ -4,7 +4,7 @@
   "description": "This is the description of the plugin.",
   "strapi": {
     "name": "Import Content",
-    "icon": "plug",
+    "icon": "file-import",
     "description": "Description of import-content plugin."
   },
   "dependencies": {},
