Changed Strapi uuid in backend folders

--- a/tutorials/deliveroo-clone-next-strapi-tutorial/backend/package.json
+++ b/tutorials/deliveroo-clone-next-strapi-tutorial/backend/package.json
@@ -38,7 +38,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "a45046ad-52e3-426c-a7aa-25c5de132bfe"
+    "uuid": "tutorials"
   },
   "engines": {
     "node": ">=10.0.0",
