--- a/tutorials/react-strapi-apollo-blog/backend/package.json
+++ b/tutorials/react-strapi-apollo-blog/backend/package.json
@@ -29,7 +29,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "624680ce-d5f5-4597-9926-b6c673cb546f"
+    "uuid": "tutorialsf"
   },
   "engines": {
     "node": ">=10.0.0",
