Add stripe to package.json

--- a/tutorials/deliveroo-clone-nuxt-strapi-tutorial/backend/package.json
+++ b/tutorials/deliveroo-clone-nuxt-strapi-tutorial/backend/package.json
@@ -32,7 +32,8 @@
     "strapi-plugin-settings-manager": "3.0.0-beta.16.4",
     "strapi-plugin-upload": "3.0.0-beta.16.4",
     "strapi-plugin-users-permissions": "3.0.0-beta.16.4",
-    "strapi-utils": "3.0.0-beta.16.4"
+    "strapi-utils": "3.0.0-beta.16.4",
+    "stripe": "^8.11.0"
   },
   "author": {
     "name": "A Strapi developer"
