--- a/tutorials/deliveroo-clone-next-strapi-tutorial/backend/package.json
+++ b/tutorials/deliveroo-clone-next-strapi-tutorial/backend/package.json
@@ -32,7 +32,8 @@
     "strapi-plugin-settings-manager": "3.0.0-beta.14",
     "strapi-plugin-upload": "3.0.0-beta.14",
     "strapi-plugin-users-permissions": "3.0.0-beta.14",
-    "strapi-utils": "3.0.0-beta.14"
+    "strapi-utils": "3.0.0-beta.14",
+    "stripe": "^8.11.0"
   },
   "author": {
     "name": "A Strapi developer"
