--- a/tutorials/import-content-plugin-tutorial/import-content-plugin-tutorial.yml
+++ b/tutorials/import-content-plugin-tutorial/import-content-plugin-tutorial.yml
@@ -1,5 +1,5 @@
-- title: How to create a custom plugin
-  link: https://strapi.io/blog/how-to-create-your-own-plugin-part-1-4
+- title: How to create an import content plugin
+  link: https://strapi.io/blog/how-to-create-an-import-content-plugin-part-1-4
   formats:
     - article
   language: en
