Fix yml exception

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -225,7 +225,7 @@
   made_by_url: https://www.habrmanova.cz/kontakty
 - title: Feedback house
   url: https://feedback.house
-  description: Have everything you need in a single management tool: Goals, Performance evaluation, 1a1, PDI, 9Box, Internal Communication, Research, Calling Channel and Ombudsman
+  description: Have everything you need in a single management tool. Goals, Performance evaluation, 1a1, PDI, 9Box, Internal Communication, Research, Calling Channel and Ombudsman
   categories:
     - Corporate website
     - Marketing
