Fix yml exceptions 2

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -278,7 +278,7 @@
   made_by_url: https://twitter.com/philgourley
 - title: Paradigma
   url: https://www.paradigmadigital.com
-  description: We are Paradigm, we are people who have decided to put their talent at the service of a purpose: to make exceptional projects to help create a better world.
+  description: We are Paradigm, we are people who have decided to put their talent at the service of a purpose. To make exceptional projects to help create a better world.
   categories:
     - Corporate website
   frontend:
@@ -287,7 +287,7 @@
   made_by_url: https://twitter.com/paradigmate
 - title: Lachose
   url: https://www.lachose.fr/agency
-  description: The thing is thus, an agency where everything moves, where nothing is frozen and in which ultimately, only one thing has not changed since its creation: its independence.
+  description: The thing is thus, an agency where everything moves, where nothing is frozen and in which ultimately, only one thing has not changed since its creation. Its independence.
   categories:
     - Agency
   frontend:
