Update ESC Nasa description

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -335,7 +335,7 @@
   made_by_url: https://www.instagram.com/weflycheap
 - title: ESC Nasa
   url: https://esc.gsfc.nasa.gov
-  description: The Exploration and Space Communications (ESC) projects division recognizes that every moment is an opportunity for action. We stand ready to provide cross-cutting technical expertise and creative problem-solving to deliver not only high rate/full coverage communications services, but bold, forward-thinking solutions to advance exploration and discovery.
+  description: We stand ready to provide cross-cutting technical expertise and creative problem-solving to deliver not only high rate/full coverage communications services, but bold, forward-thinking solutions to advance exploration and discovery.
   categories:
     - Exploration & Space communication
   frontend:
