Update Jim recipes

--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -1126,7 +1126,7 @@
   authors:
     - Jim Laurie
   github_authors:
-    - jimlaurie
+    - lauriejim
   image_url: https://blog.strapi.io/content/images/2020/04/jim-recipes-twitter.jpg
   topics:
     - data
@@ -1140,7 +1140,7 @@
   authors:
     - Jim Laurie
   github_authors:
-    - jimlaurie
+    - lauriejim
   image_url: https://blog.strapi.io/content/images/2020/04/jim-recipes-twitter.jpg
   topics:
     - draft
